// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the ErrorMessage component matches the snapshot 1`] = `
<div
  className="akGZW"
  role="alert"
>
  <img
    alt=""
    className="cfhiIS"
    src="exclamation-triangle.svg"
  />
  <span
    className="dvtOGe"
  >
    <span>
      This is a test
    </span>
  </span>
</div>
`;

exports[`the ErrorMessage component with an implemented placeholder matches the snapshot 1`] = `
<div
  className="akGZW"
  role="alert"
>
  <img
    alt=""
    className="cfhiIS"
    src="exclamation-triangle.svg"
  />
  <span
    className="dvtOGe"
  >
    <span>
      This is a test 
      <a
        className="jWXgwc"
        href="mailto:support@yoast.com"
      >
        <span>
          please contact support
        </span>
      </a>
      .
    </span>
  </span>
</div>
`;

exports[`the ErrorMessage with no Icon requested matches the snapshot 1`] = `
<div
  className="GlToM"
  role="alert"
>
  <span
    className="dvtOGe"
  >
    <span>
      This is a test 
      <a
        className="jWXgwc"
        href="mailto:support@yoast.com"
      >
        <span>
          please contact support
        </span>
      </a>
      .
    </span>
  </span>
</div>
`;
